# curivao

./: CLAUDE.md  main.py  pyproject.toml  system_prompt.txt
agents/: embeddings.py  image_generation_agent.py  image_planning_agent.py  product_ingestion_agent.py  product_selection_agent.py
agents/prompts/: image_generation_agent_system_prompt.md  image_planning_agent_system_prompt.md  selection_agent_system_prompt.md
agents/schemas/: image_planning_agent_schema.py  product_ingestion_agent_schema.py  product_selection_agent_schema.py
api/: main.py
api/routes/: rooms.py
data/: product_urls.txt  scrape.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Hero.tsx  Navbar.tsx  RoomCard.tsx  RoomGrid.tsx
frontend/lib/: api.ts  data.ts  supabase-server.ts  types.ts
frozen/a-serene-nordic-minimalist-living-room-with-pale-oak-oat-lin/: 1_room_selection.json  3_image_gen_plan_output.json
frozen/classic-american-transitional-living-room-with-warm-greige-w/: 1_room_selection.json  (+1 more)
scripts/: backfill_images.py  test_generation.py
selections/: a-classic-american-transitional-living-room-with-warm-greige.json  a-light-nordic-minimalist-living-room-with-pale-oak-oat-line.json  a-refined-industrial-living-room-with-exposed-concrete-warm-.json  a-warm-modern-farmhouse-living-room-with-shiplap-natural-woo.json  an-eclectic-bohemian-living-room-with-layered-textiles-warm-.json  moody-industrial-loft-with-dark-metals-exposed-brick-and-lea.json
services/: image_fetch.py  supabase.py
(+44 files in other folders)
